fixed image sizes - too small

--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ p {
   	text-align: center;
 }
 .pics{
-  height: 100px;
-  width: 100px;
+  height: 250px;
+  width: 250px;
   display: block;
   margin-left: auto;
   margin-right: auto;	
